# escalada-api

./: .env.example  .gitignore  README.md  RUNBOOK_CONCURS.md  alembic.ini  ci_db_gate.sh  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
data/: competition_officials.json  events.ndjson  users.json
data/boxes/: 0.json  1.json  2.json
escalada/: main.py  rate_limit.py  validation.py
escalada/api/: audit.py  auth.py  backup.py  health.py  live.py  official_export.py  ops.py  podium.py  public.py  ranking_time_tiebreak.py  save_ranking.py
escalada/auth/: __init__.py  deps.py  service.py
escalada/core/: __init__.py  contest.py
escalada/db/: config.py  database.py  health.py  migrate.py  models.py  repositories.py
escalada/routers/: upload.py
escalada/scripts/: seed.py
escalada/storage/: __init__.py  json_store.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_add_users_table.py  0003_add_event_actor_meta.py
tests/: conftest.py  test_auth.py  test_backup_restore_drill.py  test_backup_snapshot.py  test_db_integration.py  test_live.py  test_live_tiebreak_badges.py  test_official_export.py  test_podium.py  test_production_safety.py  test_public.py  test_ranking_time_tiebreak.py  test_rbac_e2e.py  test_rbac_integration.py  test_save_ranking.py  test_simulation_fifteen_boxes.py  test_simulation_six_boxes.py  test_upload_validation.py  test_ws_fifteen_boxes_admin.py  test_ws_judge_flow.py  test_ws_six_boxes.py
